@@ -1,10 +1,10 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="main" class="edu.mcw.rgd.RNASeqPipeline.Manager">
-		<property name="version" value="RNASeq Pipeline -- build May 23, 2023" />
+		<property name="version" value="RNASeq Pipeline -- build May 24, 2023" />
 		<property name="ncbiSoftFilesFtpLink" value="ftp://ftp.ncbi.nlm.nih.gov/geo/series/"/>
 		<property name="indexOfStartFolderForDownload" value="100"/> <!-- default is 0; applies to first thread only -->
-		<property name="indexOfStopFolderForDownload" value="105"/> <!-- applies to last thread only -->
+		<property name="indexOfStopFolderForDownload" value="999"/> <!-- applies to last thread only -->
 		<property name="numberOfFilesPerFolderOnNcbi" value="1000"/> <!-- 1000 -->
 		<property name="rnaSeqToRgdMapper" ref="rnaSeqToRgdMapper"/>
 		<property name="numberOfMapperThreads" value="10"/><!-- default is 10; so far best performance is got with 10 threads -->
