@@ -1,3 +1,6 @@
+May 24, 2023
+  simplified code; implemented code analysis for data loaded after specific cutoff date
+
 May 23, 2023
   upgraded logging to log4j2
 
